--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     compile 'com.android.support:design:25.3.0'
     compile 'com.android.support:support-v13:25.3.0'
     compile 'com.android.support:cardview-v7:25.3.0'
+    compile 'com.shawnlin:number-picker:2.4.2'
+
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
