--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,14 +26,17 @@ dependencies {
 
 
 
+
+
+
+
+    compile 'com.android.support:appcompat-v7:25.3.0'
+    compile 'com.android.support:design:25.3.0'
     compile 'com.android.support:design:25.3.0'
     compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'com.android.support:design:25.3.0'
     compile 'com.android.support:support-v13:25.3.0'
     compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.shawnlin:number-picker:2.4.2'
-
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
@@ -43,6 +46,9 @@ dependencies {
     compile 'com.google.android.gms:play-services-places:10.0.1'
     compile 'com.github.jd-alexander:library:1.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.1'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.firebaseui:firebase-ui:1.1.1'
+    compile 'com.android.support:support-vector-drawable:25.3.0'
     testCompile 'junit:junit:4.12'
 }
 
