--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,11 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+             url 'https://maven.fabric.io/public'
+
+        }
+
     }
 }
 
